<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="za.ac.nplinnovations.agendabook.features.ui.tasks.TasksFragment"
        android:label="@string/title_tasks"
        tools:layout="@layout/fragment_tasks" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="za.ac.nplinnovations.agendabook.features.ui.progress.ProgressFragment"
        android:label="@string/title_progress"
        tools:layout="@layout/fragment_progress" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="za.ac.nplinnovations.agendabook.features.ui.markcompleted.MarkCompletedFragment"
        android:label="@string/title_mark_complete"
        tools:layout="@layout/fragment_mark_completed" />
</navigation>