<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/fab_button_padding"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@android:color/background_dark"
            android:textAppearance="?android:textAppearanceMedium" />

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/padding_left"
            android:ems="10"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@android:color/background_dark"
            android:textAppearance="?android:textAppearanceMedium" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/padding_left"
            android:ems="10"
            android:lines="3"
            android:scrollbars="vertical"
            android:gravity="start|top"
            android:inputType="textMultiLine" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@android:color/background_dark"
            android:textAppearance="?android:textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:ems="10"
                android:hint="@string/date_hint"
                android:inputType="date" />

            <ImageView
                android:id="@+id/ivDteCalender"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                app:srcCompat="@drawable/ic_baseline_calendar_today_24" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/bottomMargin"
        android:layout_marginLeft="@dimen/bottomMargin"
        android:layout_marginRight="@dimen/bottomMargin"
        android:layout_marginBottom="@dimen/fab_button_padding"
        android:background="@drawable/shape_buy_now"
        android:text="@string/add_task"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/bottomMarginExtra"
        android:layout_marginRight="@dimen/bottomMarginExtra"
        android:background="@drawable/shape_buy_now_red"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        android:textStyle="bold" />
</androidx.appcompat.widget.LinearLayoutCompat>